	  load_buffer().
- files.c:
  do_insertfile()
	- Readd the NANO_SMALL #ifdef around the start_again: label to
	  avoid a warning. (DLR)
- global.c:
  shortcut_init()
	- Remove redundant NANO_SMALL #ifdef. (DLR)
- nano.c:
  die_save_file()
	- Clarify the error message when there are too many backup files
	  and the current one can't be written. (DLR)
  do_para_begin(), do_para_end()
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
- nano.h:
	- Add WIDTH_OF_TAB #define, containing the default width of a
	  tab. (DLR)
- rcfile.c:
  parse_rcfile()
	- Add missing brackets around an if statement block so that
	  parsing the numeric argument after "tabsize" works properly
	  again. (DLR, found by Mike Frysinger)
	- Since flag values are longs, use "%ld" instead of "%d" in the
	  debugging messages indicating when a flag is set or unset.
	  (DLR)
- search.c:
  findnextstr()
	- Take the no_sameline parameter after can_display_wrap and
	  wholewords, not after all other parameters. (DLR)
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
- winio.c:
  unget_kbinput()
	- New function used as a wrapper for ungetch(). (DLR)
  get_kbinput()
	- When reading an escape sequence, set get_verbatim_kbinput()'s
	  new first parameter to the first character of the sequence
	  instead of putting that character back and reading the entire
	  sequence afterwards. (DLR)
  get_verbatim_kbinput()
	- Add new parameter first.  If first isn't ERR, make it the
	  first character in the returned sequence instead of reading
	  the first character in via blocking input. (DLR)
  get_mouseinput()
	- Consolidate two if statements to increase efficiency. (DLR)
	- Check kbinput against metaval instead of (erroneously) ctrlval
	  when putting back a meta sequence. (DLR)
	- If there are more than MAIN_VISIBLE shortcuts available, only